# pong_in_SDL2

./: CMakeLists.txt  README.md  ball.cpp  ball.h  main.cpp  paddle.cpp  paddle.h
